interstellar/tests/gql/snapshots/gql__snapshots__parse_ddl_mixed_case_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateEdgeType:
    name: KNOWS
    properties:
      - name: since
        prop_type: Int
        required: false
        default: ~
    from_types:
      - Person
    to_types:
      - Person
