interstellar/tests/gql/snapshots/gql__snapshots__parse_edge_bidirectional_snapshot.snap
---
source: interstellar/tests/gql/snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: a
            labels: []
            properties: []
            where_clause: ~
        - Edge:
            variable: ~
            labels:
              - KNOWS
            direction: Both
            quantifier: ~
            properties: []
            where_clause: ~
        - Node:
            variable: b
            labels: []
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
call_procedure_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Variable: a
      alias: ~
    - expression:
        Variable: b
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
